--- a/html/styles.css
+++ b/html/styles.css
@@ -136,7 +136,6 @@ nav{
     justify-content: center;
     align-items: center;
     font-family: 'Quicksand', sans-serif;
-
 }
 
 .contact-form {
@@ -454,6 +453,7 @@ main{
     text-align: center;
     box-sizing: border-box;
     margin: 0;
+    background-color: aqua;
 }
 
 
@@ -502,7 +502,6 @@ main{
     /* border-top-left-radius: 5em; */
     box-sizing: border-box;
     margin-left: 1em;
-
 }
 
 
@@ -511,7 +510,8 @@ main{
     width: 73%;
     height: 100%;
     /* background-color: rgb(228, 255, 228); */
-    background-color: rgb(251, 251, 251);
+    /* background-color: rgb(251, 251, 251); */
+    background-color: firebrick;
 
     /* border-top-right-radius: 5em; */
     padding: 1.5em;
@@ -617,3 +617,92 @@ main{
     /* border-radius: 50%; */
     /* background-color: violet; */
 }
+
+
+#aboutUs-container{
+    width: 100%;
+    height: 60em;
+    /* background-color: purple; */
+    display: flex;
+    position: relative;
+    font-family: 'Quicksand', sans-serif;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#about_uno{
+    width: 100%;
+    height: 80%;
+    /* background-color: aqua; */
+    flex: 1;
+}
+
+
+#about_dos{
+    width: 100%;
+    height: 20%;
+    background-color: #6bd61f;
+    background-color: #358000;
+    background-color: #366B0F;
+    flex: 1;
+    
+}
+
+#imgAbout-container{
+    position: relative;
+    width: 90%;
+    height: 40%;
+    background-color: darkred;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    background-image: url(../img/aboutUs.jpg);
+    background-size: cover;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 1em;
+}
+
+#descriptionAbout-container{
+    width: 60%;
+    height:40%;
+    background-color: #358000;
+    margin-top: 2em;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    flex-direction: column;
+    align-items: center;
+}
+
+#phrase-container{
+    width: 100%;
+    height: 35%;
+    /* background-color: blueviolet; */
+}
+
+#textUs-container{
+    width: 100%;
+    height: 65%;
+    /* background-color: darkblue; */
+    float: left;
+}
+
+#frase{
+    font-family: 'Quicksand', sans-serif;
+    font-weight: bold;
+    margin-top: 0;
+}
+
+#frase span {
+    font-weight: normal;
+}
+
+#textUs-container{
+    font-family: 'Quicksand', sans-serif;
+    margin-top: 0;
+}
+
