--- a/html/styles.css
+++ b/html/styles.css
@@ -30,7 +30,7 @@ nav{
     align-items: center;
     font-family: 'Quicksand', sans-serif;
     /* font-size: large; */
-    background-color: rgba(255, 255, 255, 0.95);;
+    background-color: rgba(255, 255, 255, 1);;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 10000;
 }
@@ -131,51 +131,37 @@ nav{
 #form-ContactUs{
     width: 100%;
     height: 50em;
-    /* background-color: purple; */
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     font-family: 'Quicksand', sans-serif;
-
+    background-color: burlywood;
 }
-
-.contact-form {
-    width: 80%;
-    height: 90%;
-    background-color: #252525;
-    /* border-radius: 10px;
-    border-top-left-radius: 6em;
-    border-top-right-radius: 6em; */
-    border-radius: 6em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    /* margin-top: 0; */
-    padding: 1em;
-    
-}
-
 
 #cont_titulo{
     width: 100%;
     height: 6%;
-    /* background-color: rgb(0, 34, 255); */
     float: left;
     display: flex; 
     justify-content: center; 
     align-items: center;
+    background-color: rgb(0, 34, 255);
     /* padding-bottom: 1em; */
 }
 
 #cont_descripcion{
     width: 100%;
-    height: 3%;
-    /* background-color: rgb(115, 255, 0); */
+    height: 4%;
     float: left;
     margin-bottom: 1em;
+    background-color: rgb(115, 255, 0);
+
 }
 
 
 #titulo_form{
-    /* background-color: slategrey; */
+    background-color: slategrey;
     margin: 0; 
     padding: 0; 
     color: #6bd61f;
@@ -183,7 +169,7 @@ nav{
 
 
 #descripcion{
-    /* background-color: slategrey; */
+    background-color: slategrey;
     margin: 0; 
     padding: 0; 
     color: white;
@@ -196,33 +182,29 @@ nav{
 #form{
     width: 100%;
     height: 100%;
-    /* background-color: rgb(176, 212, 15); */
+    background-color: rgb(176, 212, 15);
 }
 
 #form_uno {
     width: 40%; 
-    height: 80%;
-    /* background-color: rgb(255, 0, 174); */
+    height: 55%;
+    background-color: rgb(255, 0, 174);
     float: left;
     margin-left: 5em;
 }
 
 #form_dos {
     width: 40%; 
-    height: 80%;
-    /* background-color: rgb(0, 183, 255);  */
+    height: 55%;
+    background-color: rgb(0, 183, 255); 
     float: right;
     margin-right: 5em;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    justify-content: center;
 }
 
 #cont_btn{
     width: 100%;
     height: 5%;
-    /* background-color: aqua; */
+    background-color: aqua;
     margin-top: 1em;
     float: left;
     display: flex; 
