--- a/html/styles.css
+++ b/html/styles.css
@@ -130,13 +130,14 @@ nav{
 
 #form-ContactUs{
     width: 100%;
-    height: 50em;
+    height: 52em;
+    /* padding-top: 3em; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     font-family: 'Quicksand', sans-serif;
-    background-color: burlywood;
+    background-color: #252525;
 }
 
 #cont_titulo{
@@ -146,7 +147,8 @@ nav{
     display: flex; 
     justify-content: center; 
     align-items: center;
-    background-color: rgb(0, 34, 255);
+    box-sizing: border-box;
+    /* background-color: rgb(0, 34, 255); */
     /* padding-bottom: 1em; */
 }
 
@@ -154,14 +156,16 @@ nav{
     width: 100%;
     height: 4%;
     float: left;
+    /* margin-top: 1em; */
     margin-bottom: 1em;
-    background-color: rgb(115, 255, 0);
+    box-sizing: border-box;
+    /* background-color: rgb(115, 255, 0); */
 
 }
 
 
 #titulo_form{
-    background-color: slategrey;
+    /* background-color: slategrey; */
     margin: 0; 
     padding: 0; 
     color: #6bd61f;
@@ -169,7 +173,7 @@ nav{
 
 
 #descripcion{
-    background-color: slategrey;
+    /* background-color: slategrey; */
     margin: 0; 
     padding: 0; 
     color: white;
@@ -181,35 +185,35 @@ nav{
 
 #form{
     width: 100%;
-    height: 100%;
-    background-color: rgb(176, 212, 15);
+    height: 50%;
+    /* background-color: rgb(176, 212, 15); */
 }
 
 #form_uno {
     width: 40%; 
-    height: 55%;
-    background-color: rgb(255, 0, 174);
+    height: 80%;
     float: left;
     margin-left: 5em;
+    /* background-color: rgb(255, 0, 174); */
 }
 
 #form_dos {
     width: 40%; 
-    height: 55%;
-    background-color: rgb(0, 183, 255); 
+    height: 80%;
     float: right;
     margin-right: 5em;
+    /* background-color: rgb(0, 183, 255);  */
 }
 
 #cont_btn{
     width: 100%;
-    height: 5%;
-    background-color: aqua;
+    height: 10%;
     margin-top: 1em;
     float: left;
     display: flex; 
     justify-content: center; 
     align-items: center;
+    /* background-color: aqua; */
 }  
 
 label {
@@ -236,7 +240,7 @@ select{
 
 #form_uno textarea {
     width: 90%;
-    height: 25%;
+    height: 35%;
     border: 1px solid #ccc;
     border-radius: 6px;
     font-size: 14px;
@@ -269,6 +273,42 @@ select{
     background-color: #f01bff;
     border-color: #f01bff;
     cursor: pointer;
+}
+
+
+#ubicacion{
+    width: 100%;
+    height: 40%;
+    padding: 1em 0;
+    /* padding-bottom: 3em; */
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: stretch;
+    /* background-color: red; */
+}
+
+#ubicacion-info {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    color: white;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    /* background-color: red; */
+}
+
+
+#ubicacion-info iframe{
+    margin-top: 1em;
+    display: flex;
+    align-items: center;
 }
 
 
