--- a/html/styles.css
+++ b/html/styles.css
@@ -533,6 +533,17 @@ main{
     margin-left: 1em;
 }
 
+/* #svcs-section-1::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(orange, rgb(255, 34, 0));
+    opacity: 0.7;
+    z-index: -1;
+} */
 
 
 .svcs-description{
