--- a/html/styles.css
+++ b/html/styles.css
@@ -751,23 +751,25 @@ main{
 
 #extrasAbout-container{
     width: 100%;
-    height: 55%;
-    background-color: black;
+    height: 63%;
+    /* background-color: black; */
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
     justify-content: center;
 }
 
 .extras-container{
-    width: 27%;
+    width: 25%;
     height: 100%;
-    background-color: pink;
-    border-left: 2px solid green;
+    /* background-color: pink; */
+    border-left: 2px solid #8DC069;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: var(--spacing--base-1-25);
+    padding-left: 1em;
 }
 
 .titleExtra-container{
@@ -789,30 +791,43 @@ main{
 
 #main-AboutUs{
     max-width: 100%;
-    height: 50em;
-    background-color: #b008bc;
+    height: 57em;
+    /* background-color: #b008bc; */
+    background-color: #D5DECF;
 }
 
 #titulo{
     width: 100%;
-    height: 5em;
-    background-color: yellow;
+    height: 3em;
+    /* background-color: yellow; */
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
 #description{
-    width: 100%;
-    height: 13em;
-    background-color: rgb(162, 0, 255);
+    width: 80%;
+    height: 10em;
+    /* background-color: rgb(162, 0, 255); */
+    margin-top: 3em;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    border: solid 2px #358000;
+    margin-bottom: 3em;
+}
+
+#texto_AboutUs{
+    padding: 1em 1em;
+    font-family: 'Quicksand', sans-serif;
+    text-align: justify;
     margin: 0;
-    padding: 0;
 }
 
 
 #img{
     width: 100%;
-    height: 13em;
+    height: 18em;
     background-color: rgb(255, 98, 0);
     margin: 0;
     padding: 0;
@@ -824,9 +839,34 @@ main{
 #opciones{
     width: 100%;
     height: 20em;
-    background-color: rgb(21, 255, 0);
+    /* background-color: rgb(21, 255, 0); */
+    background-color: #358000;
     margin: 0;
     padding: 0;
     display: flex; 
     justify-content: center; 
+}
+
+.texto-Extra{
+   font-size:medium;
+   text-align:justify;
+   padding-right: 3em;
+   font-family: 'Quicksand', sans-serif;
+   font-size: 18;
+   color: #D5DECF;
+   opacity: 10;
+}
+
+#tituloAboutUs{
+    font-family: 'Quicksand', sans-serif;
+    font-size:xx-large;
+    font-weight: bold;
+}
+
+#tituloExtra{
+    font-family: 'Quicksand', sans-serif;
+    font-size:large;
+    color: #C4CDBD;
+    font-weight: 600;
+
 }
