--- a/html/styles.css
+++ b/html/styles.css
@@ -615,7 +615,7 @@ main{
     /* background-color: dodgerblue; */
 }
 
-#servicio-img-1{
+.servicio-img-1{
     width: 30%;
     height: 100%;
     box-sizing: border-box;
@@ -623,7 +623,7 @@ main{
     /* background-color: firebrick; */
 }
 
-#servicio-img-1 img{
+.servicio-img-1 img{
     max-width: 100%;
     max-height: auto;
     object-fit: cover;
@@ -632,7 +632,7 @@ main{
 
 
 
-#servicio-img-2{
+.servicio-img-2{
     width: 40%;
     height: 100%;
     box-sizing: border-box;
@@ -641,14 +641,14 @@ main{
     /* background-color: mediumslateblue; */
 }
 
-#servicio-img-2 img{
+.servicio-img-2 img{
     max-width: 100%;
     max-height: auto;
     object-fit: cover;
     display: block;
 }
 
-#servicio-img-3{
+.servicio-img-3{
     width: 30%;
     height: 100%;
     box-sizing: border-box;
@@ -657,7 +657,7 @@ main{
     /* background-color: navy; */
 }
 
-#servicio-img-3 img{
+.servicio-img-3 img{
     max-width: 100%;
     max-height: auto;
     object-fit: cover;
@@ -751,6 +751,21 @@ main{
     color: black;
     cursor: pointer;
 }
+
+
+
+#img-construction-1{
+    width: 35%;
+}
+
+#img-construction-2{
+    width: 35%;
+}
+
+#img-construction-3{
+    width: 30%;
+}
+
 
 
 /* Seccion de Acerca de nosotros */
