--- a/html/styles.css
+++ b/html/styles.css
@@ -791,21 +791,22 @@ main{
 
 #main-AboutUs{
     max-width: 100%;
-    height: 57em;
+    height: 60em;
     /* background-color: #b008bc; */
     background-color: #D5DECF;
 }
 
-#titulo{
+#titleAboutUs-container{
     width: 100%;
     height: 3em;
     /* background-color: yellow; */
     margin: 0;
     padding: 0;
     text-align: center;
+    padding-top: 1em;
 }
 
-#description{
+#descriptionAboutUs-container{
     width: 80%;
     height: 10em;
     /* background-color: rgb(162, 0, 255); */
@@ -825,18 +826,25 @@ main{
 }
 
 
-#img{
+#imgAboutUs-container{
     width: 100%;
-    height: 18em;
+    height: 21em;
     background-color: rgb(255, 98, 0);
     margin: 0;
     padding: 0;
     z-index: 1;
-    background-image: url(../img/aboutUs.jpg);
-    background-size: cover;
+    /* background-image: url(../img/prueba2.0.png);
+    background-size: cover;    */
 }
 
-#opciones{
+#imgAboutUs-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+#extrasAbout{
     width: 100%;
     height: 20em;
     /* background-color: rgb(21, 255, 0); */
@@ -854,6 +862,7 @@ main{
    font-family: 'Quicksand', sans-serif;
    font-size: 18;
    color: #D5DECF;
+   color: #C4DCB3;
    opacity: 10;
 }
 
@@ -867,6 +876,11 @@ main{
     font-family: 'Quicksand', sans-serif;
     font-size:large;
     color: #C4CDBD;
+    color: #C4DCB3;
     font-weight: 600;
 
+}
+
+#mainAboutUs{
+    margin-top: 100px;
 }
