Prueba con foto

--- a/html/styles.css
+++ b/html/styles.css
@@ -849,6 +849,7 @@ main{
     height: 20em;
     /* background-color: rgb(21, 255, 0); */
     background-color: #358000;
+    background-color: red;
     margin: 0;
     padding: 0;
     display: flex; 
