--- a/html/styles.css
+++ b/html/styles.css
@@ -791,14 +791,15 @@ main{
 
 #main-AboutUs{
     max-width: 100%;
-    height: 60em;
+    height: 75em;
     /* background-color: #b008bc; */
     background-color: #D5DECF;
+    background-color: #E9EFE7;
 }
 
 #titleAboutUs-container{
     width: 100%;
-    height: 3em;
+    height: 5em;
     /* background-color: yellow; */
     margin: 0;
     padding: 0;
@@ -808,27 +809,28 @@ main{
 
 #descriptionAboutUs-container{
     width: 80%;
-    height: 10em;
+    height: 11em;
     /* background-color: rgb(162, 0, 255); */
     margin-top: 3em;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
     border: solid 2px #358000;
-    margin-bottom: 3em;
+    margin-bottom: 5em;
 }
 
 #texto_AboutUs{
     padding: 1em 1em;
     font-family: 'Quicksand', sans-serif;
     text-align: justify;
+    font-size: 18px;
     margin: 0;
 }
 
 
 #imgAboutUs-container{
     width: 100%;
-    height: 21em;
+    height: 30em;
     background-color: rgb(255, 98, 0);
     margin: 0;
     padding: 0;
@@ -849,7 +851,6 @@ main{
     height: 20em;
     /* background-color: rgb(21, 255, 0); */
     background-color: #358000;
-    background-color: red;
     margin: 0;
     padding: 0;
     display: flex; 
@@ -864,6 +865,7 @@ main{
    font-size: 18;
    color: #D5DECF;
    color: #C4DCB3;
+   color: #F4F7F3;
    opacity: 10;
 }
 
@@ -878,6 +880,9 @@ main{
     font-size:large;
     color: #C4CDBD;
     color: #C4DCB3;
+    color: white;
+    color: whitesmoke;
+    color: #F4F7F3;
     font-weight: 600;
 
 }
