--- a/html/styles.css
+++ b/html/styles.css
@@ -805,18 +805,23 @@ main{
 #imgAbout-container{
     position: relative;
     width: 90%;
-    height: 40%;
+    height: 55%;
     background-color: darkred;
     position: absolute;
     top: 57%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -38%);
     z-index: 1;
-    background-image: url(../img/aboutUs.jpg);
+    /* background-image: url(../img/AcercaDeNosotros3.jpeg); */
     background-size: cover;
     overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 1em;
+}
+
+#imgPrueba{
+    width: 100%;
+    height: 100%;
 }
 
 #imgAbout-container:hover {
