--- a/html/styles.css
+++ b/html/styles.css
@@ -925,9 +925,9 @@ main{
 #main-AboutUs{
     max-width: 100%;
     height: 58em;
-    /* background-color: #b008bc; */
+    /* background-color: #b008bc;
     background-color: #D5DECF;
-    background-color: #E9EFE7;
+    background-color: #E9EFE7; */
 }
 
 #titleAboutUs-container{
