--- a/html/styles.css
+++ b/html/styles.css
@@ -1,3 +1,5 @@
+
+
 html, body{
     margin: 0;
     padding: 0;
@@ -1108,4 +1110,97 @@ main{
     width: 100%;
     height: 50em;
     /* background-color: tomato; */
+}
+
+
+
+.btn{
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+#click{
+    display: none;
+}
+
+
+
+/* Responsive para dispositivos móviles */
+@media(max-width: 767px){
+    body, nav, main, footer, ul, #main-presentation, #services-container{
+        width: 100vw;
+    }
+
+    .titles{
+        font-size: 30px;
+    }
+
+    nav{
+        justify-content: space-between;
+        
+    }
+
+    .btn{
+        display: block;
+    }
+
+
+
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: rgb(203, 203, 203);
+        top: 120px;
+        left: -200%;
+        text-align: center;
+        transition: all .5s;
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 0;
+    }
+
+    nav ul li{
+        display: block;
+        float: none;
+        /* margin: 50px 0;
+        line-height: 30px; */
+    }
+
+    nav ul li a{
+        font-size: 16.5px;
+    }
+
+    li a:hover, li a.active{
+        background: #bf0d00;
+        color:white;
+    }
+
+    #click:checked ~ ul{
+        left:0;
+    }
+
+
+    #nav-logo-Container {
+        width: 50%;
+        display: flex;
+        align-content: center;
+        flex-wrap: wrap;
+    }
+
+    #main-logo {
+        width: 100%;
+        height: 50%;
+    }
+
+    #services-header h3{
+        font-size: 1em;
+    }
 }
